temporarily disable rule and output blocks to resolve layout issues with input block

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,4 @@
 }
 body {
   min-height: 100vh;
-  background-color: #000;
-  color: #fff;
 }
